@@ -1,3 +1,8 @@
+2007-03-09  Brian Cameron  <brian.cameron@sun.com>
+
+	* daemon/slave.c, gui/gdmsetup.c: Free leaked memory when
+	  calling g_strconcat.
+
 2007-03-07  William Jon McCann  <mccann@jhu.edu>
 
 	* daemon/gdmconsolekit.c (open_ck_session):
